verge historikk